temporarily change template

--- a/my_manager/templates/index.html
+++ b/my_manager/templates/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Custom Homepage</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to My Custom Django Homepage</h1>
-    <p>This is a custom page served by Django!</p>
+    <h1>Django password manager</h1>
 </body>
 </html>
