--- a/my_manager/templates/index.html
+++ b/my_manager/templates/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'style.css' %}">
     <title>Document</title>
 </head>
 <body>
     <h1>Django password manager</h1>
 </body>
+{% load static %}
 </html>
