--- a/my_manager/templates/index.html
+++ b/my_manager/templates/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <h1>Django password manager</h1>
+    <div class="container">
+        <div class="header">
+            <div class="nav"></div>
+        </div>
+    </div>
 </body>
 {% load static %}
 </html>
