add header blocks

--- a/my_manager/templates/index.html
+++ b/my_manager/templates/index.html
@@ -10,10 +10,46 @@
 <body>
     <h1>Django password manager</h1>
     <div class="container">
-        <div class="header">
-            <div class="nav"></div>
+        <header class="header">
+            <div class='wrapper'>
+                <div class="header__body">
+                  <div class="header__logotype">
+                   <img src="img/Rectangle 25.png" alt="" class="header__logo logoimage">
+                   </div>
+                   <div class="header__burger">
+                    <span>
+     
+                    </span>
+                </div>
+                   <nav class="header__menu">
+                       <ul class="header__list">
+                           <li>
+                               <a href="#" class="header__link">HOME</a>
+                            </li>
+                            <li>
+                                <a href="#" class="header__link">PASSWORD</a>
+                             </li>
+                             <li>
+                                <a href="#" class="header__link">WORK</a>
+                             </li>
+                       </ul>
+                   </nav>
+                   <div class="wallet__button">
+                        <a href="work.html" class="wallet__but">CV</a>
+                   </div>
+                </div>
+            </div>
+        </header>
+        <div class="header_main_text">
+        <div class="header__text">
+            <p class="main_text">DJANGO</p>
+            <p class="text__header main__header__text">MANAGER</p>
         </div>
-    </div>
+        <div class="img_header">
+            <img src="#" alt="">
+        </div>
+        </div>
+        </div>
 </body>
 {% load static %}
 </html>
